build-files/ppanggolin/2.2.6/README.md
# PPanGGOLiN container

Main tool: [PPanGGOLiN](https://github.com/labgem/PPanGGOLiN)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda"

  Name               Version       Build                 Channel    
──────────────────────────────────────────────────────────────────────
  _libgcc_mutex      0.1           conda_forge           conda-forge
  _openmp_mutex      4.5           2_gnu                 conda-forge
  aragorn            1.2.41        h7b50bb2_5            bioconda   
  archspec           0.2.5         pyhd8ed1ab_0          conda-forge
  aria2              1.37.0        h4e1c2bf_3            conda-forge
  blosc              1.21.6        he440d0b_1            conda-forge
  bokeh              3.8.1         pyhd8ed1ab_0          conda-forge
  bzip2              1.0.8         hda65f42_8            conda-forge
  c-ares             1.34.6        hb03c661_0            conda-forge
  c-blosc2           2.22.0        hc31b594_1            conda-forge
  ca-certificates    2025.11.12    hbd8a1cb_0            conda-forge
  colorama           0.4.6         pyhd8ed1ab_1          conda-forge
  contourpy          1.3.3         py312hd9148b4_3       conda-forge
  dataclasses        0.8           pyhc8e2a94_3          conda-forge
  gawk               5.3.1         hcd3d067_0            conda-forge
  gmp                6.3.0         hac33072_2            conda-forge
  gmpy2              2.2.1         py312hcaba1f9_2       conda-forge
  hdf5               1.14.6        nompi_h1b119a7_104    conda-forge
  icu                75.1          he02047a_0            conda-forge
  infernal           1.1.5         pl5321h7b50bb2_4      bioconda   
  jinja2             3.1.6         pyhcf101f3_1          conda-forge
  keyutils           1.6.3         hb9d3cd8_0            conda-forge
  krb5               1.21.3        h659f571_0            conda-forge
  lcms2              2.17          h717163a_0            conda-forge
  ld_impl_linux-64   2.45          default_hbd61a6d_105  conda-forge
  lerc               4.0.0         h0aef613_1            conda-forge
  libaec             1.1.4         h3f801dc_0            conda-forge
  libasprintf        0.25.1        h3f43e3d_1            conda-forge
  libblas            3.11.0        5_h4a7cf45_openblas   conda-forge
  libcblas           3.11.0        5_h0358290_openblas   conda-forge
  libcurl            8.17.0        h4e3cde8_1            conda-forge
  libdeflate         1.25          h17f619e_0            conda-forge
  libedit            3.1.20250104  pl5321h7949ede_0      conda-forge
  libev              4.33          hd590300_2            conda-forge
  libexpat           2.7.3         hecca717_0            conda-forge
  libffi             3.5.2         h9ec8514_0            conda-forge
  libfreetype        2.14.1        ha770c72_0            conda-forge
  libfreetype6       2.14.1        h73754d4_0            conda-forge
  libgcc             15.2.0        he0feb66_16           conda-forge
  libgcc-ng          15.2.0        h69a702a_16           conda-forge
  libgettextpo       0.25.1        h3f43e3d_1            conda-forge
  libgfortran        15.2.0        h69a702a_16           conda-forge
  libgfortran5       15.2.0        h68bc16d_16           conda-forge
  libgomp            15.2.0        he0feb66_16           conda-forge
  libiconv           1.18          h3b78370_2            conda-forge
  libidn2            2.3.8         hfac485b_1            conda-forge
  libjpeg-turbo      3.1.2         hb03c661_0            conda-forge
  liblapack          3.11.0        5_h47877c9_openblas   conda-forge
  liblzma            5.8.1         hb9d3cd8_2            conda-forge
  libnghttp2         1.67.0        had1ee68_0            conda-forge
  libnsl             2.0.1         hb9d3cd8_1            conda-forge
  libopenblas        0.3.30        pthreads_h94d23a6_4   conda-forge
  libpng             1.6.53        h421ea60_0            conda-forge
  libsqlite          3.51.1        h0c1763c_1            conda-forge
  libssh2            1.11.1        hcf80075_0            conda-forge
  libstdcxx          15.2.0        h934c35e_16           conda-forge
  libstdcxx-ng       15.2.0        hdf11a46_16           conda-forge
  libtiff            4.7.1         h9d88235_1            conda-forge
  libunistring       0.9.10        h7f98852_0            conda-forge
  libuuid            2.41.3        h5347b49_0            conda-forge
  libwebp-base       1.6.0         hd42ef1d_0            conda-forge
  libxcb             1.17.0        h8a09558_0            conda-forge
  libxcrypt          4.4.36        hd590300_1            conda-forge
  libxml2            2.13.9        h04c0eec_0            conda-forge
  libzlib            1.3.1         hb9d3cd8_2            conda-forge
  lz4-c              1.10.0        h5888daf_1            conda-forge
  mafft              7.526         h4bc722e_0            conda-forge
  markupsafe         3.0.3         py312h8a5da7c_0       conda-forge
  mmseqs2            15.6f452      pl5321h6a68c12_3      bioconda   
  mpc                1.3.1         h24ddda3_1            conda-forge
  mpfr               4.2.1         h90cbb55_3            conda-forge
  narwhals           2.14.0        pyhcf101f3_0          conda-forge
  ncurses            6.5           h2d0b736_3            conda-forge
  networkx           3.6.1         pyhcf101f3_0          conda-forge
  nomkl              1.0           h5ca1d4c_0            conda-forge
  numexpr            2.14.1        py312h88efc94_101     conda-forge
  numpy              1.26.4        py312heda63a1_0       conda-forge
  openjpeg           2.5.4         h55fea9a_0            conda-forge
  openssl            3.6.0         h26f9b46_0            conda-forge
  packaging          25.0          pyh29332c3_1          conda-forge
  pandas             2.3.3         py312hf79963d_1       conda-forge
  pcre2              10.45         hc749103_0            conda-forge
  perl               5.32.1        7_hd590300_perl5      conda-forge
  pillow             12.0.0        py312h50c33e8_2       conda-forge
  pip                25.3          pyh8b19718_0          conda-forge
  plotly             5.24.1        pyhd8ed1ab_1          conda-forge
  ppanggolin         2.2.6         py312h0fa9677_0       bioconda   
  pthread-stubs      0.4           hb9d3cd8_1002         conda-forge
  py-cpuinfo         9.0.0         pyhd8ed1ab_1          conda-forge
  pyrodigal          3.6.3.post1   py312h0fa9677_1       bioconda   
  pytables           3.10.2        py312hefc0c3f_10      conda-forge
  python             3.12.12       hd63d673_1_cpython    conda-forge
  python-dateutil    2.9.0.post0   pyhe01879c_2          conda-forge
  python-tzdata      2025.3        pyhd8ed1ab_0          conda-forge
  python_abi         3.12          8_cp312               conda-forge
  pytz               2025.2        pyhd8ed1ab_0          conda-forge
  pyyaml             6.0.3         py312h8a5da7c_0       conda-forge
  readline           8.3           h853b02a_0            conda-forge
  scipy              1.16.3        py312h54fa4ab_2       conda-forge
  setuptools         80.9.0        pyhff2d567_0          conda-forge
  six                1.17.0        pyhe01879c_1          conda-forge
  snappy             1.2.2         h03e3b7b_1            conda-forge
  tenacity           9.1.2         pyhd8ed1ab_0          conda-forge
  tk                 8.6.13        noxft_ha0e22de_103    conda-forge
  tornado            6.5.4         py312h961da02_0       conda-forge
  tqdm               4.67.1        pyhd8ed1ab_1          conda-forge
  typing-extensions  4.15.0        h396c80c_0            conda-forge
  typing_extensions  4.15.0        pyhcf101f3_0          conda-forge
  tzdata             2025c         h8577fbf_0            conda-forge
  wget               1.25.0        hc2d8bac_0            conda-forge
  wheel              0.45.1        pyhd8ed1ab_1          conda-forge
  xorg-libxau        1.0.12        hb03c661_1            conda-forge
  xorg-libxdmcp      1.1.5         hb03c661_1            conda-forge
  xyzservices        2025.11.0     pyhd8ed1ab_0          conda-forge
  yaml               0.2.5         h280c20c_3            conda-forge
  zlib               1.3.1         hb9d3cd8_2            conda-forge
  zlib-ng            2.3.2         hceb46e0_1            conda-forge
  zstd               1.5.7         hb78ec9c_6            conda-forge
```

</details>

Code repository: https://github.com/labgem/PPanGGOLiN

Basic information on how to use this tool:
- executable: ppanggolin
- help: --help
- version: --version
- description: |
> PPanGGOLiN builds pangenomes through a graphical model and a statistical method to partition gene families in persistent, shell and cloud genomes.

Additional information:

PPanGGOLiN only creates the pangenome graphs. It is recommended to use another tool to visualize them. Please read https://github.com/labgem/PPanGGOLiN/wiki for more information.
  
Full documentation: https://github.com/labgem/PPanGGOLiN/wiki

## Example Usage

```bash
ppanggolin annotate --fasta organisms.fasta.list --output output 

# many of the commands manipulate the 'pangenome.h5' file in place
ppanggolin cluster -p pangenome.h5
ppanggolin graph -p pangenome.h5 
ppanggolin partition -p pangenome.h5
ppanggolin draw -p pangenome.h5 --ucurve   

# there are some human-readable files that can be generated as well
ppanggolin write -p pangenome.h5 --stats --output stats
```
