build-files/ppanggolin/2.3.1/README.md
# PPanGGOLiN container

Main tool: [PPanGGOLiN](https://github.com/labgem/PPanGGOLiN)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda"

  Name                       Version       Build                 Channel    
──────────────────────────────────────────────────────────────────────────────
  _openmp_mutex              4.5           20_gnu                conda-forge
  _x86_64-microarch-level    3             3_x86_64_v3           conda-forge
  aragorn                    1.2.41        h7b50bb2_5            bioconda   
  archspec                   0.2.5         pyhd8ed1ab_0          conda-forge
  aria2                      1.37.0        h4b33fff_4            conda-forge
  at-spi2-atk                2.38.0        h0630a04_3            conda-forge
  at-spi2-core               2.40.3        h0630a04_0            conda-forge
  atk-1.0                    2.38.0        h04ea711_2            conda-forge
  aws-c-auth                 0.10.4        h4610da3_2            conda-forge
  aws-c-cal                  0.9.15        h6bbde05_1            conda-forge
  aws-c-common               0.14.3        hb03c661_0            conda-forge
  aws-c-compression          0.3.2         h01ee8f8_5            conda-forge
  aws-c-http                 0.11.0        hbe094ff_5            conda-forge
  aws-c-io                   0.27.5        h4f381ba_1            conda-forge
  aws-c-s3                   0.13.1        h7508075_1            conda-forge
  aws-c-sdkutils             0.2.7         h01ee8f8_3            conda-forge
  aws-checksums              0.2.10        h01ee8f8_5            conda-forge
  blosc                      1.21.6        he440d0b_1            conda-forge
  bokeh                      3.10.0        pyhd8ed1ab_0          conda-forge
  brotli                     1.2.0         h505cf86_3            conda-forge
  brotli-bin                 1.2.0         h9908984_3            conda-forge
  bzip2                      1.0.8         hda65f42_10           conda-forge
  c-ares                     1.34.8        hebe6cf0_2            conda-forge
  c-blosc2                   3.2.3         hc31b594_0            conda-forge
  ca-certificates            2026.7.22     hbd8a1cb_0            conda-forge
  cairo                      1.18.4        he90730b_1            conda-forge
  cairomm                    1.16.2        ha770c72_1            conda-forge
  cairomm-1.16               1.16.2        h7e731d7_1            conda-forge
  cffi                       2.1.1         py312h703531f_2       conda-forge
  contourpy                  1.3.3         py312h0a2e395_4       conda-forge
  cycler                     0.12.1        pyhcf101f3_2          conda-forge
  dataclasses                0.8           pyhc8e2a94_3          conda-forge
  dbus                       1.16.2        h24cb091_1            conda-forge
  epoxy                      1.5.10        hb03c661_2            conda-forge
  expat                      2.8.1         hecca717_1            conda-forge
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0            conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0            conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0            conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3            conda-forge
  fontconfig                 2.18.3        h4db4eae_1            conda-forge
  fonts-conda-ecosystem      1             0                     conda-forge
  fonts-conda-forge          1             hc364b38_1            conda-forge
  fonttools                  4.63.0        py312h8a5da7c_0       conda-forge
  freetype                   2.14.3        ha770c72_2            conda-forge
  fribidi                    1.0.16        hb03c661_1            conda-forge
  gawk                       5.4.1         h0a3468a_0            conda-forge
  gdk-pixbuf                 2.44.8        h68053f1_0            conda-forge
  glib-tools                 2.88.3        h4916ab3_1            conda-forge
  gmp                        6.3.0         hfd2156b_3            conda-forge
  gmpy2                      2.3.1         py312h04c1168_0       conda-forge
  graph-tool                 2.98          py312h302780e_303     conda-forge
  graph-tool-base            2.98          py312h39e8a9f_303     conda-forge
  graphite2                  1.3.15        h54a6638_1            conda-forge
  gtk3                       3.24.52       ha5ea40c_0            conda-forge
  harfbuzz                   14.3.1        ha770c72_0            conda-forge
  hdf5                       2.2.0         nompi_hc529623_100    conda-forge
  hicolor-icon-theme         0.17          ha770c72_3            conda-forge
  icu                        78.3          py310h44b86e0_2       conda-forge
  infernal                   1.1.5         pl5321h7b50bb2_4      bioconda   
  jinja2                     3.1.6         pyhcf101f3_1          conda-forge
  keyutils                   1.6.3         h7cc23a3_1            conda-forge
  kiwisolver                 1.5.0         py312h0a2e395_0       conda-forge
  krb5                       1.22.2        hbc21106_2            conda-forge
  lcms2                      2.19.1        h0c24ade_1            conda-forge
  ld_impl_linux-64           2.46.1        default_hbd61a6d_102  conda-forge
  lerc                       4.2.0         hdb68285_0            conda-forge
  libaec                     1.1.5         h088129d_0            conda-forge
  libasprintf                0.25.1        h3f43e3d_1            conda-forge
  libblas                    3.11.0        9_h4a7cf45_openblas   conda-forge
  libboost                   1.90.0        hd24cca6_1            conda-forge
  libboost-python            1.90.0        py312hf890105_1       conda-forge
  libbrotlicommon            1.2.0         h39a168f_3            conda-forge
  libbrotlidec               1.2.0         ha411449_3            conda-forge
  libbrotlienc               1.2.0         h018ffa1_3            conda-forge
  libcblas                   3.11.0        9_h0358290_openblas   conda-forge
  libcups                    2.3.3         h7a8fb5f_6            conda-forge
  libcurl                    8.21.0        ha042cf0_5            conda-forge
  libdeflate                 1.25          hd45a770_1            conda-forge
  libdrm                     2.4.129       h7cc23a3_0            conda-forge
  libedit                    3.1.20250104  pl5321h373387f_1      conda-forge
  libegl                     1.7.0         ha4b6fd6_5            conda-forge
  libegl-devel               1.7.0         ha4b6fd6_5            conda-forge
  libev                      4.33          h280c20c_3            conda-forge
  libexpat                   2.8.1         hecca717_1            conda-forge
  libffi                     3.7.0         h3435931_0            conda-forge
  libfreetype                2.14.3        ha770c72_2            conda-forge
  libfreetype6               2.14.3        h5e6c136_2            conda-forge
  libgcc                     16.1.0        ha9f2e26_3            conda-forge
  libgcc-ng                  16.1.0        h69a702a_3            conda-forge
  libgettextpo               0.25.1        h3f43e3d_1            conda-forge
  libgfortran                16.1.0        h69a702a_3            conda-forge
  libgfortran5               16.1.0        h79bb938_3            conda-forge
  libgirepository            1.86.0        hf8e6ea4_1            conda-forge
  libgl                      1.7.0         ha4b6fd6_5            conda-forge
  libgl-devel                1.7.0         ha4b6fd6_5            conda-forge
  libglib                    2.88.3        h45c3219_1            conda-forge
  libglvnd                   1.7.0         ha4b6fd6_5            conda-forge
  libglx                     1.7.0         ha4b6fd6_5            conda-forge
  libglx-devel               1.7.0         ha4b6fd6_5            conda-forge
  libgomp                    16.1.0        he0feb66_3            conda-forge
  libharfbuzz                14.3.1        h23af247_0            conda-forge
  libharfbuzz-devel          14.3.1        h23af247_0            conda-forge
  libiconv                   1.18          h0cb94f2_3            conda-forge
  libidn2                    2.3.8         hfac485b_1            conda-forge
  libjpeg-turbo              3.2.0         hb03c661_1            conda-forge
  liblapack                  3.11.0        9_h47877c9_openblas   conda-forge
  liblzma                    5.8.3         hb03c661_1            conda-forge
  libnghttp2                 1.68.1        h74cf4be_1            conda-forge
  libnsl                     2.0.1         hb9d3cd8_1            conda-forge
  libopenblas                0.3.34        pthreads_h94d23a6_0   conda-forge
  libpciaccess               0.19          hb03c661_1            conda-forge
  libpng                     1.6.58        h922cc85_1            conda-forge
  libpsl                     0.23.1        hd9e3e90_1            conda-forge
  libraqm                    0.11.0        h6406941_0            conda-forge
  librsvg                    2.62.3        h4c96295_0            conda-forge
  libsqlite                  3.53.4        h13e7031_1            conda-forge
  libssh2                    1.11.1        h6154650_1            conda-forge
  libstdcxx                  16.1.0        h934c35e_3            conda-forge
  libstdcxx-ng               16.1.0        hdf11a46_3            conda-forge
  libtiff                    4.7.2         h9d88235_0            conda-forge
  libunistring               0.9.10        h7f98852_0            conda-forge
  libuuid                    2.42.2        h5347b49_0            conda-forge
  libwebp-base               1.6.0         hd42ef1d_1            conda-forge
  libxcb                     1.17.0        hb83e432_1            conda-forge
  libxcrypt                  4.4.38        h280c20c_0            conda-forge
  libxkbcommon               1.13.2        h51789e4_1            conda-forge
  libxml2                    2.15.3        h49c6c72_1            conda-forge
  libxml2-16                 2.15.3        hca6bf5a_1            conda-forge
  libzlib                    1.3.2         h25fd6f3_3            conda-forge
  lz4-c                      1.10.0        hee9eb32_2            conda-forge
  mafft                      7.526         h4bc722e_0            conda-forge
  markupsafe                 3.0.3         py312h8a5da7c_1       conda-forge
  matplotlib-base            3.11.1        py312h4c94fcb_2       conda-forge
  mmseqs2                    15.6f452      pl5321h6a68c12_3      bioconda   
  mpc                        1.4.0         he0a73b1_0            conda-forge
  mpfr                       4.2.2         ha2cb11d_1            conda-forge
  munkres                    1.1.4         pyhd8ed1ab_1          conda-forge
  narwhals                   2.25.0        pyhcf101f3_0          conda-forge
  ncurses                    6.6           hdb14827_1            conda-forge
  networkx                   3.6.1         pyhcf101f3_0          conda-forge
  nomkl                      1.0           h5ca1d4c_0            conda-forge
  numexpr                    2.14.2        py312h88efc94_100     conda-forge
  numpy                      1.26.4        py312heda63a1_0       conda-forge
  openjpeg                   2.5.4         h55fea9a_0            conda-forge
  openssl                    3.6.3         h35e630c_1            conda-forge
  packaging                  26.3          pyhc364b38_0          conda-forge
  pandas                     2.3.3         py312hf79963d_1       conda-forge
  pango                      1.58.2        hda50119_0            conda-forge
  pcre2                      10.47         h8b3dc9c_1            conda-forge
  perl                       5.32.1        7_hd590300_perl5      conda-forge
  pillow                     12.3.0        py312h50c33e8_0       conda-forge
  pip                        26.2.1        pyh8b19718_0          conda-forge
  pixman                     0.46.4        h54a6638_3            conda-forge
  plotly                     5.24.1        pyhd8ed1ab_1          conda-forge
  ppanggolin                 2.3.1         py312hfabe715_0       bioconda   
  pthread-stubs              0.4           hb03c661_1003         conda-forge
  py-cpuinfo                 9.0.0         pyhd8ed1ab_1          conda-forge
  pycairo                    1.29.1        py312hace4431_0       conda-forge
  pycparser                  3.0           pyhcf101f3_0          conda-forge
  pygobject                  3.50.0        py312hf4b392c_1       conda-forge
  pyparsing                  3.3.2         pyhcf101f3_0          conda-forge
  pyrodigal                  3.7.1         py312h247cb63_1       bioconda   
  pytables                   3.11.1        py312h920095a_5       conda-forge
  python                     3.12.13       h8ab3286_1_cpython    conda-forge
  python-dateutil            2.9.0.post0   pyhe01879c_2          conda-forge
  python-tzdata              2026.3        pyhd8ed1ab_0          conda-forge
  python_abi                 3.12          8_cp312               conda-forge
  pytz                       2026.3.post1  pyhcf101f3_0          conda-forge
  pyyaml                     6.0.3         py312h8a5da7c_1       conda-forge
  qhull                      2020.2        h434a139_5            conda-forge
  readline                   8.3           hd6e31c0_1            conda-forge
  s2n                        1.7.6         h7e3ee7f_0            conda-forge
  scipy                      1.17.1        py312h54fa4ab_1       conda-forge
  setuptools                 84.0.0        pyh332efcf_0          conda-forge
  sigcpp-3.0                 3.6.0         h59595ed_0            conda-forge
  six                        1.17.0        pyhe01879c_1          conda-forge
  snappy                     1.2.2         h03e3b7b_1            conda-forge
  sparsehash                 2.0.4         hcb278e6_1            conda-forge
  tenacity                   9.1.4         pyhcf101f3_0          conda-forge
  tk                         8.6.13        noxft_h1df4ec4_4      conda-forge
  tornado                    6.5.8         py312h4c3975b_0       conda-forge
  tqdm                       4.70.0        pyh8f84b5b_0          conda-forge
  typing-extensions          4.16.0        h69aa097_0            conda-forge
  typing_extensions          4.16.0        pyhcf101f3_0          conda-forge
  tzdata                     2026c         h151e31d_0            conda-forge
  unicodedata2               17.0.1        py312h4c3975b_0       conda-forge
  wayland                    1.26.0        h1964d1d_1            conda-forge
  wget                       1.25.0        h653f8fd_1            conda-forge
  wheel                      0.48.0        pyhd8ed1ab_0          conda-forge
  xkeyboard-config           2.48          h280c20c_0            conda-forge
  xorg-libice                1.1.2         h280c20c_0            conda-forge
  xorg-libsm                 1.2.6         h0d788c3_1            conda-forge
  xorg-libx11                1.8.13        he1eb515_1            conda-forge
  xorg-libxau                1.0.12        hb03c661_2            conda-forge
  xorg-libxcomposite         0.4.7         hb03c661_0            conda-forge
  xorg-libxcursor            1.2.3         hb9d3cd8_0            conda-forge
  xorg-libxdamage            1.1.6         hb9d3cd8_0            conda-forge
  xorg-libxdmcp              1.1.5         hb03c661_2            conda-forge
  xorg-libxext               1.3.7         h7cc23a3_1            conda-forge
  xorg-libxfixes             6.0.2         h7cc23a3_1            conda-forge
  xorg-libxi                 1.8.3         h7cc23a3_1            conda-forge
  xorg-libxinerama           1.1.6         hecca717_0            conda-forge
  xorg-libxrandr             1.5.5         h7cc23a3_1            conda-forge
  xorg-libxrender            0.9.12        hb03c661_1            conda-forge
  xorg-libxtst               1.2.5         hb9d3cd8_3            conda-forge
  xorg-libxxf86vm            1.1.7         hb03c661_0            conda-forge
  xorg-xextproto             7.3.0         hb9d3cd8_1004         conda-forge
  xorg-xorgproto             2025.1        h280c20c_1            conda-forge
  xyzservices                2026.3.0      pyhd8ed1ab_0          conda-forge
  yaml                       0.2.5         hebe6cf0_3            conda-forge
  zlib                       1.3.2         h25fd6f3_3            conda-forge
  zlib-ng                    2.3.3         hce19668_1            conda-forge
  zstandard                  0.25.0        py312h1b36aeb_2       conda-forge
  zstd                       1.5.7         hb78ec9c_7            conda-forge
```

</details>

Code repository: https://github.com/labgem/PPanGGOLiN

Basic information on how to use this tool:
- executable: ppanggolin
- help: --help
- version: --version
- description: |
> PPanGGOLiN builds pangenomes through a graphical model and a statistical method to partition gene families in persistent, shell and cloud genomes.

Additional information:

PPanGGOLiN only creates the pangenome graphs. It is recommended to use another tool to visualize them. Please read https://github.com/labgem/PPanGGOLiN/wiki for more information.
  
Full documentation: https://github.com/labgem/PPanGGOLiN/wiki

## Example Usage

```bash
ppanggolin annotate --fasta organisms.fasta.list --output output 

# many of the commands manipulate the 'pangenome.h5' file in place
ppanggolin cluster -p pangenome.h5
ppanggolin graph -p pangenome.h5 
ppanggolin partition -p pangenome.h5
ppanggolin draw -p pangenome.h5 --ucurve   

# there are some human-readable files that can be generated as well
ppanggolin write -p pangenome.h5 --stats --output stats
```
